sitio web completo con boostrap

--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -32,13 +32,13 @@
                             <a class="nav-link text-light" href="../pages/servicios.html">Servicios</a>
                         </li>
                         <li class="nav-item pe-3">
-                            <a class="nav-link text-light" href="#">Quienes somos</a>
+                            <a class="nav-link text-light" href="../pages/nosotros.html">Quienes somos</a>
                         </li>
                         <li class="nav-item pe-3">
-                            <a class="nav-link text-light">Ubicacion</a>
+                            <a class="nav-link text-light" href="../pages/ubicacion.html">Ubicacion</a>
                         </li>
                         <li class="nav-item pe-3">
-                            <a class="nav-link text-light">Contacto</a>
+                            <a class="nav-link text-light" href="../pages/contacto.html">Contacto</a>
                         </li>
                     </ul>
                 </div>
@@ -47,50 +47,34 @@
     <main>
         <div class="container text-center">
             <h2 class="fs-2 text-center">Servicios que ofrecemos:</h2>
-            <div class="row mt-4 text-center">
-                <div class="col-6 col-lg-12 card p-3 mb-3" id="services" data-aos="flip-left" data-aos-duration="1000">
+            <div  id="contenedor--service">
+                <div  id="services" data-aos="flip-left" data-aos-duration="1000">
                     <div>
-                        <h4>Numero 1</h4>
-                        <p> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laboriosam ipsam facilis corrupti
-                            delectus soluta hic, eos modi, rem debitis consequatur ex reiciendis cupiditate illum beatae
-                            enim tempore itaque temporibus incidunt! Lorem ipsum dolor sit amet consectetur adipisicing
-                            elit. Autem porro quidem explicabo, veniam quasi ea facere! Aspernatur atque iusto dolorum
-                            a,
-                            doloribus ducimus suscipit illum iure ab, dolorem, voluptatibus non?.</p>
+                        <h4>Servicios Correctivos</h4>
+                        <p>  Nuestros servicios de mecánica industrial están enfocados en la reparación y re acondicionamiento de equipos industriales, nuestra reparación de equipos esta enfocada en la metrología, ajustes y tolerancias de estos para dar la seguridad a nuestros clientes de que que contara con un equipo confiable en el tiempo, contamos con gran experiencia en reparación de maquinaria rotativa industrial como por ejemplo, bombas centrifugas multimarca, ventiladores, etc.</p>
+                        <button type="button" class="btn btn-outline-primary">Cotizar</button>
                     </div>
 
                 </div>
-                <div class="col-6 col-lg-12 card p-3 mb-3" id="services" data-aos="flip-left" data-aos-duration="1000">
+                <div  id="services" data-aos="flip-left" data-aos-duration="1000">
                     <div>
-                        <h4>Numero 2</h4>
-                        <p> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laboriosam ipsam facilis corrupti
-                            delectus soluta hic, eos modi, rem debitis consequatur ex reiciendis cupiditate illum beatae
-                            enim tempore itaque temporibus incidunt! Lorem ipsum dolor sit amet consectetur adipisicing
-                            elit. Autem porro quidem explicabo, veniam quasi ea facere! Aspernatur atque iusto dolorum
-                            a,
-                            doloribus ducimus suscipit illum iure ab, dolorem, voluptatibus non?.</p>
+                        <h4>Maestranza </h4>
+                        <p> Nuestra maestranza cuenta con equipamiento para mecanizado de partes y piezas, poseemos tornos convencionales y fresadoras universales para fabricación y reparación de componentes, contamos con servicios de cilindrado de planchas hasta 12mm de espesor por 1500 mm de largo y equipo de corte plasma cnc para fabricación de piezas especiales y en variedad de materiales.</p>
+                        <button type="button" class="btn btn-outline-primary">Cotizar</button>
                     </div>
                 </div>
-                <div class="col-6 col-lg-12 card p-3 mb-3" id="services" data-aos="flip-left" data-aos-duration="1000">
+                <div  id="services" data-aos="flip-left" data-aos-duration="1000">
                     <div>
-                        <h4>Numero 3</h4>
-                        <p> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laboriosam ipsam facilis corrupti
-                            delectus soluta hic, eos modi, rem debitis consequatur ex reiciendis cupiditate illum beatae
-                            enim tempore itaque temporibus incidunt! Lorem ipsum dolor sit amet consectetur adipisicing
-                            elit. Autem porro quidem explicabo, veniam quasi ea facere! Aspernatur atque iusto dolorum
-                            a,
-                            doloribus ducimus suscipit illum iure ab, dolorem, voluptatibus non?.</p>
+                        <h4>Mantenimiento Preventivo </h4>
+                        <p> Nuestra misión, en este tipo de mantenimiento, es la de mantener un nivel de funcionamiento óptimo de los equipos, programando las intervenciones de sus puntos críticos en el momento idóneo. Suele tener un carácter sistemático, es decir, nos anticipamos e intervenimos un equipo, para prevenir inconvenientes futuros.</p>
+                        <button type="button" class="btn btn-outline-primary">Cotizar</button>
                     </div>
                 </div>
-                <div class="col-6 col-lg-12 card p-3 mb-3" id="services" data-aos="flip-left" data-aos-duration="1000">
-                    <div
-                        <h4>Numero 4</h4>
-                        <p> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laboriosam ipsam facilis corrupti
-                            delectus soluta hic, eos modi, rem debitis consequatur ex reiciendis cupiditate illum beatae
-                            enim tempore itaque temporibus incidunt! Lorem ipsum dolor sit amet consectetur adipisicing
-                            elit. Autem porro quidem explicabo, veniam quasi ea facere! Aspernatur atque iusto dolorum
-                            a,
-                            doloribus ducimus suscipit illum iure ab, dolorem, voluptatibus non?.</p>
+                <div  id="services" data-aos="flip-left" data-aos-duration="1000">
+                    <div>
+                        <h4>Mantenimiento Correctivo </h4>
+                        <p> Nuestra misión, en este tipo de mantenimiento, es la de planificar un conjunto de tareas destinadas a corregir los defectos que se van presentando en los distintos equipos.</p>
+                        <button type="button" class="btn btn-outline-primary">Cotizar</button>
                     </div>
                 </div>
             </div>
@@ -99,18 +83,30 @@
 
     </main>
     <footer>
-        <div class="container">
-            <div class="row">
-                <div class="col-12 text-center">
-                    <h3>Redes Sociales</h3>
-                    <img src="../assest/img/facebook_icono.png" alt="Facebook"><a href="#"></a></img>
-                    <img src="../assest/img/instagram_icono-removebg-preview.png" alt="Instagram"><a href="#"></a></img>
-                    <img src="../assest/img/gmail_icono-removebg-preview.png" alt="Gmail"><a href="#"></a></img>
-                    <p>Pagina Creada por <a href="https://www.instagram.com/edu.schettino0/">Eduardo Schettino </a> |
-                        2022.</p>
+        <div class="row p-4">
+            <div class="col-12 col-lg-6 align-self-center">
+                <div class="row">
+                    <div class="col-12  text-center  ">
+                        <h3>Redes Sociales</h3>
+                        <img src="../assest/img/facebook_icono.png" alt="Facebook"><a href="#"></a></img>
+                        <img src="../assest/img/instagram_icono-removebg-preview.png" alt="Instagram"><a
+                            href="#"></a></img>
+                        <img src="../assest/img/gmail_icono-removebg-preview.png" alt="Gmail"><a href="#"></a></img>
+                        <p>Pagina Creada por <a href="https://www.instagram.com/edu.schettino0/">Eduardo Schettino </a>
+                            |
+                            2022.</p>
+                    </div>
                 </div>
             </div>
-        </div>
+            <div class="col-12 col-lg-6 text-center fs-5" id="footer--navmenu">
+                <ul>
+                    <li><a href="../index.html">Inicio</a></li>
+                    <li><a href="../pages/servicios.html">Servicios</a></li>
+                    <li><a href="../pages/nosotros.html">Quienes Somos</a></li>
+                    <li><a href="../pages/ubicacion.html">Ubicacion</a></li>
+                    <li><a href="../pages/contacto.html">Contacto</a></li>
+                </ul>
+            </div>
         </div>
     </footer>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
