--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
-    <title>Sosemin|2022</title>
+    <title>Sosemin | 2022</title>
 </head>
 
 <body>
@@ -25,19 +25,19 @@
                 <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                     <ul class="navbar-nav ">
                         <li class="nav-item pe-3 ">
-                            <a class="nav-link text-light" aria-current="page" href="#">Inicio</a>
+                            <a class="nav-link text-light" aria-current="page" href="../index.html">Inicio</a>
                         </li>
                         <li class="nav-item pe-3">
-                            <a class="nav-link text-light" href="pages/servicios.html">Servicios</a>
+                            <a class="nav-link text-light" href="../pages/servicios.html">Servicios</a>
                         </li>
                         <li class="nav-item pe-3">
-                            <a class="nav-link text-light" href="#">Quienes somos</a>
+                            <a class="nav-link text-light" href="../pages/nosotros.html">Quienes somos</a>
                         </li>
                         <li class="nav-item pe-3">
-                            <a class="nav-link text-light">Ubicacion</a>
+                            <a class="nav-link text-light" href="../pages/ubicacion.html">Ubicacion</a>
                         </li>
                         <li class="nav-item pe-3">
-                            <a class="nav-link text-light">Contacto</a>
+                            <a class="nav-link text-light" href="../pages/contacto.html">Contacto</a>
                         </li>
                     </ul>
                 </div>
@@ -47,14 +47,12 @@
         <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
             <div class="text-center text-light position-absolute top-50 start-50 translate-middle " id="text_carousel"
                 data-aos="fade-down" data-aos-duration="2000">
-
                 <div class="container" id="texto">
                     <h1>Sosemint Ltda</h1>
                     <p>Empresa dedicada a la industria mecanica, especializada en la fabricaciones de piezas, partes
                         y conjuntos mecanicos, asi como en el diseño de equipos especiales, mantencion y
                         reacondicionamiento de equipos y maquinaria.</p>
                 </div>
-
             </div>
             <div class="carousel-inner">
                 <div class="carousel-item active" data-bs-interval="10000">
@@ -104,16 +102,11 @@
                     </div>
                 </div>
             </div>
-            <div class="card mb-3 mt-4 text-center " data-aos="fade-up" data-aos-anchor-placement="top-bottom">
-                <img src="assest/img/medida.png" class="card-img-top" alt="...">
+            <div class="card mb-3 mt-4 text-center " data-aos="fade-up" data-aos-anchor-placement="top-bottom" id="lastpic">
+                <img src="assest/img/1805-09.jpg" class="card-img-top rounded" alt="...">
                 <div class="card-body ">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae odio quasi
-                        pariatur veritatis placeat sapiente quas expedita accusantium laudantium at, eum ducimus ipsam
-                        eos? Mollitia alias molestiae error vitae voluptatum. Lorem ipsum dolor sit amet consectetur
-                        adipisicing elit. Deleniti quas sed cupiditate debitis ipsa aliquid perspiciatis consequuntur
-                        dolores, minus reprehenderit consectetur, possimus unde velit ex, fuga aliquam suscipit cum
-                        maxime.</p>
+                    <h5 class="card-title">EQUIPAMIENTO DISPONIBLE</h5>
+                    <p class="card-text">EQUIPAMIENTO DISPONIBLE: Tornos mecánicos, tornos automáticos, torno CNC, limadoras, fresadoras horizontales, rectificadora plana, rectificadora cilíndrica, cepilladora, taladros sobremesa, taladro radial, taladros roscadores y electroerosión..</p>
                 </div>
             </div>
         </div>
@@ -129,20 +122,36 @@
 
     </main>
     <footer>
-        <div class="container">
-            <div class="row">
-                <div class="col-12 text-center">
-                    <h3>Redes Sociales</h3>
-                    <img src="assest/img/facebook_icono.png" alt="Facebook"><a href="#"></a></img>
-                    <img src="assest/img/instagram_icono-removebg-preview.png" alt="Instagram"><a href="#"></a></img>
-                    <img src="assest/img/gmail_icono-removebg-preview.png" alt="Gmail"><a href="#"></a></img>
-                    <p>Pagina Creada por <a href="https://www.instagram.com/edu.schettino0/">Eduardo Schettino </a> |
-                        2022.</p>
+        <div class="row p-4">
+            <div class="col-12 col-lg-6 align-self-center">
+                <div class="row">
+                    <div class="col-12  text-center  ">
+                        <h3>Redes Sociales</h3>
+                        <img src="assest/img/facebook_icono.png" alt="Facebook"><a href="#"></a></img>
+                        <img src="assest/img/instagram_icono-removebg-preview.png" alt="Instagram"><a
+                            href="#"></a></img>
+                        <img src="assest/img/gmail_icono-removebg-preview.png" alt="Gmail"><a href="#"></a></img>
+                        <p>Pagina Creada por <a href="https://www.instagram.com/edu.schettino0/">Eduardo Schettino </a>
+                            |
+                            2022.</p>
+                    </div>
                 </div>
             </div>
-        </div>
+            <div class="col-12 col-lg-6 text-center fs-5" id="footer--navmenu">
+                <ul>
+                    <li><a href="#header_bg">Inicio</a></li>
+                    <li><a href="pages/servicios.html">Servicios</a></li>
+                    <li><a href="pages/nosotros.html">Quienes Somos</a></li>
+                    <li><a href="pages/ubicacion.html">Ubicacion</a></li>
+                    <li><a href="pages/contacto.html">Contacto</a></li>
+                </ul>
+            </div>
         </div>
     </footer>
+
+
+
+
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
         AOS.init();
