--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -1,68 +1,116 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <link rel="stylesheet" href="../css/style.css">
-    <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+    <link rel="stylesheet" href="../css/style.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+
     <title>Sosemin|2022</title>
 </head>
+
 <body>
-    <header class="container__header">
-        <div class="container__logo"> 
-            <a href="../index.html"><img src="../assest/img/logo.png" alt="Logo" class="container__logo--img"></a>
+    <header>
+        <nav class="navbar navbar-expand-lg bg-light" id="header_bg">
+            <div class="container d-flex navbar-dark">
+                <a href="../index.html"><img src="../assest/img/logo.png" id="logo" alt="Logo"></a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon text-light"></span>
+                </button>
+                <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+                    <ul class="navbar-nav ">
+                        <li class="nav-item pe-3 ">
+                            <a class="nav-link text-light" aria-current="page" href="../index.html">Inicio</a>
+                        </li>
+                        <li class="nav-item pe-3">
+                            <a class="nav-link text-light" href="../pages/servicios.html">Servicios</a>
+                        </li>
+                        <li class="nav-item pe-3">
+                            <a class="nav-link text-light" href="../pages/nosotros.html">Quienes somos</a>
+                        </li>
+                        <li class="nav-item pe-3">
+                            <a class="nav-link text-light" href="../pages/ubicacion.html">Ubicacion</a>
+                        </li>
+                        <li class="nav-item pe-3">
+                            <a class="nav-link text-light" href="../pages/contacto.html">Contacto</a>
+                        </li>
+                    </ul>
+                </div>
+        </nav>
+    </header>
+    <main>
+        <div class="container text-center pt-5" data-aos="zoom-in">
+            <h1>Ponte en contacto con nosotros!</h1>
+            <form>
+                <div class="form-group">
+                    <label for="">Correo electronico</label>
+                    <input type="email" class="form-control"  aria-describedby="emailHelp"
+                        placeholder="Enter email">
+                    <small id="emailHelp" class="form-text text-muted">No lo compartiremos con nadie.</small>
+                </div>
+                <div class="form-group">
+                    <label for="">Nombre</label>
+                    <input type="text" class="form-control">
+                </div>
+                <div class="form-group">
+                    <label for="">Apellido</label>
+                    <input type="text" class="form-control">
+                </div>
+                <div class="form-group">
+                    <label for="">Telefono/Celular</label>
+                    <input type="number" class="form-control">
+                </div>
+                <div class="form-group">
+                    <label for="exampleFormControlTextarea1">Escribenos un mensaje!</label>
+                    <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                </div>
+                <button type="submit" class="btn btn-primary mt-5">Enviar</button>
+                <button type="reset" class="btn btn-primary mt-5">Borrar datos</button>
+            </form>
+
         </div>
-        <div class="container__menu">
-            <nav>
-                <ul class="container__menu--list">
+
+    </main>
+    <footer>
+        <div class="row p-4">
+            <div class="col-12 col-lg-6 align-self-center">
+                <div class="row">
+                    <div class="col-12  text-center  ">
+                        <h3>Redes Sociales</h3>
+                        <img src="../assest/img/facebook_icono.png" alt="Facebook"><a href="#"></a></img>
+                        <img src="../assest/img/instagram_icono-removebg-preview.png" alt="Instagram"><a
+                            href="#"></a></img>
+                        <img src="../assest/img/gmail_icono-removebg-preview.png" alt="Gmail"><a href="#"></a></img>
+                        <p>Pagina Creada por <a href="https://www.instagram.com/edu.schettino0/">Eduardo Schettino </a>
+                            |
+                            2022.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-12 col-lg-6 text-center fs-5" id="footer--navmenu">
+                <ul>
                     <li><a href="../index.html">Inicio</a></li>
                     <li><a href="../pages/servicios.html">Servicios</a></li>
                     <li><a href="../pages/nosotros.html">Quienes Somos</a></li>
                     <li><a href="../pages/ubicacion.html">Ubicacion</a></li>
                     <li><a href="../pages/contacto.html">Contacto</a></li>
                 </ul>
-            </nav>
-        </div>
-    </header>
-    <main>
-        <div class="contenedor__formulario" data-aos="zoom-in">
-                <h1>Ponte en contacto con nosotros!</h1>
-                <form action="#">
-                    <fieldset>
-                        <legend>Ingresa tu datos y te contactaremos</legend>
-                        <label for="nombre">Nombre</label>
-                        <input type="text" name="nombre" > <br>
-                        <label for="apellido">Apellido</label>
-                        <input type="text" name="apellido" > <br>
-                        <label for="correo">Correo</label>
-                        <input type="email" name="correo" > <br>
-                        <label for="telefono">Numero de Telefono</label>
-                        <input type="number" name="telefono"> <br>
-                        <textarea name="mensaje"  cols="30" rows="10" placeholder="Escribenos un mensaje"></textarea> <br>
-                        <input type="submit" value="Enviar Datos">
-                        <input type="reset" value="Limpiar datos">
-                    </fieldset>
-                </form>
-
-        </div>
-
-    </main>
-    <footer>
-        <div class="redes">
-            <h3>Redes Sociales</h3>
-            <img src="../assest/img/facebook_icono.png" alt="Facebook"><a href="#"></a></img>
-            <img src="../assest/img/instagram_icono-removebg-preview.png" alt="Instagram"><a href="#"></a></img>
-            <img src="../assest/img/gmail_icono-removebg-preview.png" alt="Gmail"><a href="#"></a></img>
-        </div>
-        <div class="copyright">
-            <p>Pagina Creada por <a href="https://www.instagram.com/edu.schettino0/">Eduardo Schettino </a> | 2022.</p>
+            </div>
         </div>
     </footer>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
-    AOS.init();
+        AOS.init();
     </script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
