--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -1,66 +1,125 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <link rel="stylesheet" href="../css/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+    <link rel="stylesheet" href="../css/style.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+
     <title>Sosemin|2022</title>
 </head>
+
 <body>
-    <header class="container__header">
-        <div class="container__logo"> 
-            <a href="../index.html"><img src="../assest/img/logo.png" alt="Logo" class="container__logo--img"></a>
+    <header>
+        <nav class="navbar navbar-expand-lg bg-light" id="header_bg">
+            <div class="container d-flex navbar-dark">
+                <a href="../index.html"><img src="../assest/img/logo.png" id="logo" alt="Logo"></a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon text-light"></span>
+                </button>
+                <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+                    <ul class="navbar-nav ">
+                        <li class="nav-item pe-3 ">
+                            <a class="nav-link text-light" aria-current="page" href="../index.html">Inicio</a>
+                        </li>
+                        <li class="nav-item pe-3">
+                            <a class="nav-link text-light" href="../pages/servicios.html">Servicios</a>
+                        </li>
+                        <li class="nav-item pe-3">
+                            <a class="nav-link text-light" href="../pages/nosotros.html">Quienes somos</a>
+                        </li>
+                        <li class="nav-item pe-3">
+                            <a class="nav-link text-light" href="../pages/ubicacion.html">Ubicacion</a>
+                        </li>
+                        <li class="nav-item pe-3">
+                            <a class="nav-link text-light" href="../pages/contacto.html">Contacto</a>
+                        </li>
+                    </ul>
+                </div>
+        </nav>
+    </header>
+    <main>
+        <div class="container mt-5" data-aos="zoom-in">
+            <div class="grid">
+                <div class="vision">
+                    <h2>Vision</h2>
+                    <p>Ser la mejor oferta de servicio industrial, sustentada en el desarrollo de capacidades,
+                        crecimiento,
+                        actualización de competencias y buenos resultados.</p>
+                </div>
+                <div class="valores">
+                    <h2>Valores</h2>
+                    <p>COMPROMISO: Somos conscientes de la importancia de cumplir nuestras promesas y por ellos nos
+                        exigimos
+                        a mejorar continuamente con el objetivo de satisfacer las expectativas de nuestros clientes,
+                        trabajadores y grupos de interés.</p>
+                    <p>COLABORACIÓN: Porque trabajamos en equipo y en un ambiente de respeto y apoyo, reconociendo el
+                        error
+                        como una oportunidad de aprendizaje, aportamos colaborativamente a los procesos que generan
+                        productos y servicios, teniendo como prioridad la satisfacción de nuestros clientes tanto
+                        internos
+                        como externos.</p>
+                </div>
+                <div class="mision">
+                    <h2>Mision</h2>
+                    <p>Brindar calidad y confiabilidad en todos nuestros productos y servicios.</p>
+                    <p>RESPONSABILIDAD: Somos responsables de nuestras decisiones y del cumplimiento de la normativa
+                        vigente
+                        para la entrega eficiente y comprometida de los servicios que nuestros clientes y partes
+                        interesadas
+                        nos han encargado.</p>
+                    <p>HONESTIDAD: Somos coherentes entre el pensar, sentir y el hacer, honrados en la intención, en las
+                        palabras y en los actos, reflejados en prácticas transparentes y correctas, anteponiendo la
+                        verdad
+                        en cualquier situación que se genere.</p>
+                    <p>RESPETO: En un ambiente de trabajo armónico, reconocemos el valor de la diversidad, respetamos la
+                        dignidad de clientes, proveedores y trabajadores y creemos que todos somos importantes para el
+                        desarrollo de la empresa.</p>
+                </div>
+
+            </div>
         </div>
-        <div class="container__menu">
-            <nav>
-                <ul class="container__menu--list">
+    </main>
+    <footer>
+        <div class="row p-4">
+            <div class="col-12 col-lg-6 align-self-center">
+                <div class="row">
+                    <div class="col-12  text-center  ">
+                        <h3>Redes Sociales</h3>
+                        <img src="../assest/img/facebook_icono.png" alt="Facebook"><a href="#"></a></img>
+                        <img src="../assest/img/instagram_icono-removebg-preview.png" alt="Instagram"><a
+                            href="#"></a></img>
+                        <img src="../assest/img/gmail_icono-removebg-preview.png" alt="Gmail"><a href="#"></a></img>
+                        <p>Pagina Creada por <a href="https://www.instagram.com/edu.schettino0/">Eduardo Schettino </a>
+                            |
+                            2022.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-12 col-lg-6 text-center fs-5" id="footer--navmenu">
+                <ul>
                     <li><a href="../index.html">Inicio</a></li>
                     <li><a href="../pages/servicios.html">Servicios</a></li>
                     <li><a href="../pages/nosotros.html">Quienes Somos</a></li>
                     <li><a href="../pages/ubicacion.html">Ubicacion</a></li>
                     <li><a href="../pages/contacto.html">Contacto</a></li>
                 </ul>
-            </nav>
-        </div>
-    </header>
-    <main>
-        <div class="quienesSomos"data-aos="zoom-in">
-            <div class="vision">
-                <h2>Vision</h2>
-                <p>Ser la mejor oferta de servicio industrial, sustentada en el desarrollo de capacidades, crecimiento, actualización de competencias y buenos resultados.</p>
             </div>
-            <div class="valores">
-                <h2>Valores</h2>
-                <p>COMPROMISO: Somos conscientes de la importancia de cumplir nuestras promesas y por ellos nos exigimos a mejorar continuamente con el objetivo de satisfacer las expectativas de nuestros clientes, trabajadores y grupos de interés.</p>
-                <p>COLABORACIÓN: Porque trabajamos en equipo y en un ambiente de respeto y apoyo, reconociendo el error como una oportunidad de aprendizaje, aportamos colaborativamente a los procesos que generan productos y servicios, teniendo como prioridad la satisfacción de nuestros clientes tanto internos como externos.</p>
-            </div>
-            <div class="mision">
-                <h2>Mision</h2>
-                <p>Brindar calidad y confiabilidad en todos nuestros productos y servicios.</p>
-                <p>RESPONSABILIDAD: Somos responsables de nuestras decisiones y del cumplimiento de la normativa vigente para la entrega eficiente y comprometida de los servicios que nuestros clientes y partes interesadas nos han encargado.</p>
-                <p>HONESTIDAD: Somos coherentes entre el pensar, sentir y el hacer, honrados en la intención, en las palabras y en los actos, reflejados en prácticas transparentes y correctas, anteponiendo la verdad en cualquier situación que se genere.</p>
-                <p>RESPETO: En un ambiente de trabajo armónico, reconocemos el valor de la diversidad, respetamos la dignidad de clientes, proveedores y trabajadores y creemos que todos somos importantes para el desarrollo de la empresa.</p>
-
-            </div>
-        </div>
-    </main>
-    <footer>
-        <div class="redes">
-            <h3>Redes Sociales</h3>
-            <img src="../assest/img/facebook_icono.png" alt="Facebook"><a href="#"></a></img>
-            <img src="../assest/img/instagram_icono-removebg-preview.png" alt="Instagram"><a href="#"></a></img>
-            <img src="../assest/img/gmail_icono-removebg-preview.png" alt="Gmail"><a href="#"></a></img>
-        </div>
-        <div class="copyright">
-            <p>Pagina Creada por <a href="https://www.instagram.com/edu.schettino0/">Eduardo Schettino </a> | 2022.</p>
         </div>
     </footer>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
-    AOS.init();
+        AOS.init();
     </script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
