correcion mobile version 2

--- a/index.html
+++ b/index.html
@@ -28,16 +28,16 @@
                             <a class="nav-link text-light" aria-current="page" href="../index.html">Inicio</a>
                         </li>
                         <li class="nav-item pe-3">
-                            <a class="nav-link text-light" href="../pages/servicios.html">Servicios</a>
+                            <a class="nav-link text-light" href="pages/servicios.html">Servicios</a>
                         </li>
                         <li class="nav-item pe-3">
-                            <a class="nav-link text-light" href="../pages/nosotros.html">Quienes somos</a>
+                            <a class="nav-link text-light" href="pages/nosotros.html">Quienes somos</a>
                         </li>
                         <li class="nav-item pe-3">
-                            <a class="nav-link text-light" href="../pages/ubicacion.html">Ubicacion</a>
+                            <a class="nav-link text-light" href="pages/ubicacion.html">Ubicacion</a>
                         </li>
                         <li class="nav-item pe-3">
-                            <a class="nav-link text-light" href="../pages/contacto.html">Contacto</a>
+                            <a class="nav-link text-light" href="pages/contacto.html">Contacto</a>
                         </li>
                     </ul>
                 </div>
