correccion padding footer

--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -47,33 +47,46 @@
     <main>
         <div class="container text-center">
             <h2 class="fs-2 text-center">Servicios que ofrecemos:</h2>
-            <div  id="contenedor--service">
-                <div   id="services" data-aos="flip-left" data-aos-duration="1000">
+            <div id="contenedor--service">
+                <div id="services" data-aos="flip-left" data-aos-duration="1000">
                     <div>
                         <h4>Servicios Correctivos</h4>
-                        <p>  Nuestros servicios de mecánica industrial están enfocados en la reparación y re acondicionamiento de equipos industriales, nuestra reparación de equipos esta enfocada en la metrología, ajustes y tolerancias de estos para dar la seguridad a nuestros clientes de que que contara con un equipo confiable en el tiempo, contamos con gran experiencia en reparación de maquinaria rotativa industrial como por ejemplo, bombas centrifugas multimarca, ventiladores, etc.</p>
+                        <p> Nuestros servicios de mecánica industrial están enfocados en la reparación y re
+                            acondicionamiento de equipos industriales, nuestra reparación de equipos esta enfocada en la
+                            metrología, ajustes y tolerancias de estos para dar la seguridad a nuestros clientes de que
+                            que contara con un equipo confiable en el tiempo, contamos con gran experiencia en
+                            reparación de maquinaria rotativa industrial como por ejemplo, bombas centrifugas
+                            multimarca, ventiladores, etc.</p>
                         <button type="button" class="btn btn-outline-primary">Cotizar</button>
                     </div>
 
                 </div>
-                <div  id="services" data-aos="flip-left" data-aos-duration="1000">
+                <div id="services" data-aos="flip-left" data-aos-duration="1000">
                     <div>
                         <h4>Maestranza </h4>
-                        <p> Nuestra maestranza cuenta con equipamiento para mecanizado de partes y piezas, poseemos tornos convencionales y fresadoras universales para fabricación y reparación de componentes, contamos con servicios de cilindrado de planchas hasta 12mm de espesor por 1500 mm de largo y equipo de corte plasma cnc para fabricación de piezas especiales y en variedad de materiales.</p>
+                        <p> Nuestra maestranza cuenta con equipamiento para mecanizado de partes y piezas, poseemos
+                            tornos convencionales y fresadoras universales para fabricación y reparación de componentes,
+                            contamos con servicios de cilindrado de planchas hasta 12mm de espesor por 1500 mm de largo
+                            y equipo de corte plasma cnc para fabricación de piezas especiales y en variedad de
+                            materiales.</p>
                         <button type="button" class="btn btn-outline-primary">Cotizar</button>
                     </div>
                 </div>
-                <div  id="services" data-aos="flip-left" data-aos-duration="1000">
+                <div id="services" data-aos="flip-left" data-aos-duration="1000">
                     <div>
                         <h4>Mantenimiento Preventivo </h4>
-                        <p> Nuestra misión, en este tipo de mantenimiento, es la de mantener un nivel de funcionamiento óptimo de los equipos, programando las intervenciones de sus puntos críticos en el momento idóneo. Suele tener un carácter sistemático, es decir, nos anticipamos e intervenimos un equipo, para prevenir inconvenientes futuros.</p>
+                        <p> Nuestra misión, en este tipo de mantenimiento, es la de mantener un nivel de funcionamiento
+                            óptimo de los equipos, programando las intervenciones de sus puntos críticos en el momento
+                            idóneo. Suele tener un carácter sistemático, es decir, nos anticipamos e intervenimos un
+                            equipo, para prevenir inconvenientes futuros.</p>
                         <button type="button" class="btn btn-outline-primary">Cotizar</button>
                     </div>
                 </div>
-                <div  id="services" data-aos="flip-left" data-aos-duration="1000">
+                <div id="services" data-aos="flip-left" data-aos-duration="1000">
                     <div>
                         <h4>Mantenimiento Correctivo </h4>
-                        <p> Nuestra misión, en este tipo de mantenimiento, es la de planificar un conjunto de tareas destinadas a corregir los defectos que se van presentando en los distintos equipos.</p>
+                        <p> Nuestra misión, en este tipo de mantenimiento, es la de planificar un conjunto de tareas
+                            destinadas a corregir los defectos que se van presentando en los distintos equipos.</p>
                         <button type="button" class="btn btn-outline-primary">Cotizar</button>
                     </div>
                 </div>
@@ -84,17 +97,14 @@
     </main>
     <footer>
         <div class="col-12 col-lg-6 align-self-center">
-            <div class="row">
-                <div class="col-12  text-center  ">
-                    <h3>Redes Sociales</h3>
-                    <img src="../assest/img/facebook_icono.png" alt="Facebook"><a href="#"></a></img>
-                    <img src="../assest/img/instagram_icono-removebg-preview.png" alt="Instagram"><a
-                        href="#"></a></img>
-                    <img src="../assest/img/gmail_icono-removebg-preview.png" alt="Gmail"><a href="#"></a></img>
-                    <p>Pagina Creada por <a href="https://www.instagram.com/edu.schettino0/">Eduardo Schettino </a>
-                        |
-                        2022.</p>
-                </div>
+            <div class="col-12  text-center  ">
+                <h3>Redes Sociales</h3>
+                <img src="../assest/img/facebook_icono.png" alt="Facebook"><a href="#"></a></img>
+                <img src="../assest/img/instagram_icono-removebg-preview.png" alt="Instagram"><a href="#"></a></img>
+                <img src="../assest/img/gmail_icono-removebg-preview.png" alt="Gmail"><a href="#"></a></img>
+                <p>Pagina Creada por <a href="https://www.instagram.com/edu.schettino0/">Eduardo Schettino </a>
+                    |
+                    2022.</p>
             </div>
         </div>
         <div class="col-12 col-lg-6 text-center fs-5" id="footer--navmenu">
@@ -106,7 +116,7 @@
                 <li><a href="../pages/contacto.html">Contacto</a></li>
             </ul>
         </div>
-</footer>
+    </footer>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
         AOS.init();
