--- a/index.html
+++ b/index.html
@@ -102,11 +102,14 @@
                     </div>
                 </div>
             </div>
-            <div class="card mb-3 mt-4 text-center " data-aos="fade-up" data-aos-anchor-placement="top-bottom" id="lastpic">
+            <div class="card mb-3 mt-4 text-center " data-aos="fade-up" data-aos-anchor-placement="top-bottom"
+                id="lastpic">
                 <img src="assest/img/1805-09.jpg" class="card-img-top rounded" alt="...">
                 <div class="card-body ">
                     <h5 class="card-title">EQUIPAMIENTO DISPONIBLE</h5>
-                    <p class="card-text">EQUIPAMIENTO DISPONIBLE: Tornos mecánicos, tornos automáticos, torno CNC, limadoras, fresadoras horizontales, rectificadora plana, rectificadora cilíndrica, cepilladora, taladros sobremesa, taladro radial, taladros roscadores y electroerosión..</p>
+                    <p class="card-text">EQUIPAMIENTO DISPONIBLE: Tornos mecánicos, tornos automáticos, torno CNC,
+                        limadoras, fresadoras horizontales, rectificadora plana, rectificadora cilíndrica, cepilladora,
+                        taladros sobremesa, taladro radial, taladros roscadores y electroerosión..</p>
                 </div>
             </div>
         </div>
@@ -122,29 +125,26 @@
 
     </main>
     <footer>
-            <div class="col-12 col-lg-6 align-self-center">
-                <div class="row">
-                    <div class="col-12  text-center  ">
-                        <h3>Redes Sociales</h3>
-                        <img src="assest/img/facebook_icono.png" alt="Facebook"><a href="#"></a></img>
-                        <img src="assest/img/instagram_icono-removebg-preview.png" alt="Instagram"><a
-                            href="#"></a></img>
-                        <img src="assest/img/gmail_icono-removebg-preview.png" alt="Gmail"><a href="#"></a></img>
-                        <p>Pagina Creada por <a href="https://www.instagram.com/edu.schettino0/">Eduardo Schettino </a>
-                            |
-                            2022.</p>
-                    </div>
-                </div>
+        <div class="col-12 col-lg-6 align-self-center">
+                <div class="col-12  text-center  ">
+                    <h3>Redes Sociales</h3>
+                    <img src="assest/img/facebook_icono.png" alt="Facebook"><a href="#"></a></img>
+                    <img src="assest/img/instagram_icono-removebg-preview.png" alt="Instagram"><a href="#"></a></img>
+                    <img src="assest/img/gmail_icono-removebg-preview.png" alt="Gmail"><a href="#"></a></img>
+                    <p>Pagina Creada por <a href="https://www.instagram.com/edu.schettino0/">Eduardo Schettino </a>
+                        |
+                        2022.</p>
             </div>
-            <div class="col-12 col-lg-6 text-center fs-5" id="footer--navmenu">
-                <ul>
-                    <li><a href="#header_bg">Inicio</a></li>
-                    <li><a href="pages/servicios.html">Servicios</a></li>
-                    <li><a href="pages/nosotros.html">Quienes Somos</a></li>
-                    <li><a href="pages/ubicacion.html">Ubicacion</a></li>
-                    <li><a href="pages/contacto.html">Contacto</a></li>
-                </ul>
-            </div>
+        </div>
+        <div class="col-12 col-lg-6 text-center fs-5" id="footer--navmenu">
+            <ul>
+                <li><a href="#header_bg">Inicio</a></li>
+                <li><a href="pages/servicios.html">Servicios</a></li>
+                <li><a href="pages/nosotros.html">Quienes Somos</a></li>
+                <li><a href="pages/ubicacion.html">Ubicacion</a></li>
+                <li><a href="pages/contacto.html">Contacto</a></li>
+            </ul>
+        </div>
     </footer>
 
 
