--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -50,8 +50,7 @@
             <form>
                 <div class="form-group">
                     <label for="">Correo electronico</label>
-                    <input type="email" class="form-control"  aria-describedby="emailHelp"
-                        placeholder="Enter email">
+                    <input type="email" class="form-control" aria-describedby="emailHelp" placeholder="Enter email">
                     <small id="emailHelp" class="form-text text-muted">No lo compartiremos con nadie.</small>
                 </div>
                 <div class="form-group">
@@ -79,18 +78,18 @@
     </main>
     <footer>
         <div class="col-12 col-lg-6 align-self-center">
-            <div class="row">
-                <div class="col-12  text-center  ">
-                    <h3>Redes Sociales</h3>
-                    <img src="../assest/img/facebook_icono.png" alt="Facebook"><a href="#"></a></img>
-                    <img src="../assest/img/instagram_icono-removebg-preview.png" alt="Instagram"><a
-                        href="#"></a></img>
-                    <img src="../assest/img/gmail_icono-removebg-preview.png" alt="Gmail"><a href="#"></a></img>
-                    <p>Pagina Creada por <a href="https://www.instagram.com/edu.schettino0/">Eduardo Schettino </a>
-                        |
-                        2022.</p>
-                </div>
+
+            <div class="col-12  text-center  ">
+                <h3>Redes Sociales</h3>
+                <img src="../assest/img/facebook_icono.png" alt="Facebook"><a href="#"></a></img>
+                <img src="../assest/img/instagram_icono-removebg-preview.png" alt="Instagram"><a href="#"></a></img>
+                <img src="../assest/img/gmail_icono-removebg-preview.png" alt="Gmail"><a href="#"></a></img>
+                <p>Pagina Creada por <a href="https://www.instagram.com/edu.schettino0/">Eduardo Schettino </a>
+                    |
+                    2022.</p>
             </div>
+
+
         </div>
         <div class="col-12 col-lg-6 text-center fs-5" id="footer--navmenu">
             <ul>
@@ -101,7 +100,7 @@
                 <li><a href="../pages/contacto.html">Contacto</a></li>
             </ul>
         </div>
-</footer>
+    </footer>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
         AOS.init();
