--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -88,18 +88,17 @@
     </main>
     <footer>
         <div class="col-12 col-lg-6 align-self-center">
-            <div class="row">
-                <div class="col-12  text-center  ">
-                    <h3>Redes Sociales</h3>
-                    <img src="../assest/img/facebook_icono.png" alt="Facebook"><a href="#"></a></img>
-                    <img src="../assest/img/instagram_icono-removebg-preview.png" alt="Instagram"><a
-                        href="#"></a></img>
-                    <img src="../assest/img/gmail_icono-removebg-preview.png" alt="Gmail"><a href="#"></a></img>
-                    <p>Pagina Creada por <a href="https://www.instagram.com/edu.schettino0/">Eduardo Schettino </a>
-                        |
-                        2022.</p>
-                </div>
+
+            <div class="col-12  text-center  ">
+                <h3>Redes Sociales</h3>
+                <img src="../assest/img/facebook_icono.png" alt="Facebook"><a href="#"></a></img>
+                <img src="../assest/img/instagram_icono-removebg-preview.png" alt="Instagram"><a href="#"></a></img>
+                <img src="../assest/img/gmail_icono-removebg-preview.png" alt="Gmail"><a href="#"></a></img>
+                <p>Pagina Creada por <a href="https://www.instagram.com/edu.schettino0/">Eduardo Schettino </a>
+                    |
+                    2022.</p>
             </div>
+
         </div>
         <div class="col-12 col-lg-6 text-center fs-5" id="footer--navmenu">
             <ul>
@@ -110,7 +109,7 @@
                 <li><a href="../pages/contacto.html">Contacto</a></li>
             </ul>
         </div>
-</footer>
+    </footer>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
         AOS.init();
