se cambia titulo a paginas

--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="../css/style.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
-    <title>Sosemin|2022</title>
+    <title>Sosemin | Servicios</title>
 </head>
 
 <body>
@@ -99,9 +99,12 @@
         <div class="col-12 col-lg-6 align-self-center">
             <div class="col-12  text-center  ">
                 <h3>Redes Sociales</h3>
-                <img src="../assest/img/facebook_icono.png" alt="Facebook"><a href="#"></a></img>
-                <img src="../assest/img/instagram_icono-removebg-preview.png" alt="Instagram"><a href="#"></a></img>
-                <img src="../assest/img/gmail_icono-removebg-preview.png" alt="Gmail"><a href="#"></a></img>
+                <img class="imgred-facebook" src="../assest/img/facebook_icono.png" alt="Facebook"><a
+                    href="#"></a></img>
+                <img class="imgred-instagram" src="../assest/img/instagram_icono-removebg-preview.png"
+                    alt="Instagram"><a href="#"></a></img>
+                <img class="imgred-gmail" src="../assest/img/gmail_icono-removebg-preview.png" alt="Gmail"><a
+                    href="#"></a></img>
                 <p>Pagina Creada por <a href="https://www.instagram.com/edu.schettino0/">Eduardo Schettino </a>
                     |
                     2022.</p>
