--- a/pages/ubicacion.html
+++ b/pages/ubicacion.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="../css/style.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
-    <title>Sosemin|2022</title>
+    <title>Sosemin| Ubicacion</title>
 </head>
 
 <body>
@@ -61,15 +61,16 @@
     </main>
     <footer class="mt-3">
         <div class="col-12 col-lg-6 align-self-center">
-                <div class="col-12  text-center  ">
-                    <h3>Redes Sociales</h3>
-                    <img src="../assest/img/facebook_icono.png" alt="Facebook"><a href="#"></a></img>
-                    <img src="../assest/img/instagram_icono-removebg-preview.png" alt="Instagram"><a
-                        href="#"></a></img>
-                    <img src="../assest/img/gmail_icono-removebg-preview.png" alt="Gmail"><a href="#"></a></img>
-                    <p>Pagina Creada por <a href="https://www.instagram.com/edu.schettino0/">Eduardo Schettino </a>
-                        |
-                        2022.</p>
+            <div class="col-12  text-center  ">
+                <h3>Redes Sociales</h3>
+                <img class="imgred-facebook" src="../assest/img/facebook_icono.png" alt="Facebook"><a href="#"></a></img>
+                <img class="imgred-instagram" src="../assest/img/instagram_icono-removebg-preview.png" alt="Instagram"><a
+                    href="#"></a></img>
+                <img class="imgred-gmail" src="../assest/img/gmail_icono-removebg-preview.png" alt="Gmail"><a
+                    href="#"></a></img>
+                <p>Pagina Creada por <a href="https://www.instagram.com/edu.schettino0/">Eduardo Schettino </a>
+                    |
+                    2022.</p>
             </div>
         </div>
         <div class="col-12 col-lg-6 text-center fs-5" id="footer--navmenu">
@@ -81,7 +82,7 @@
                 <li><a href="../pages/contacto.html">Contacto</a></li>
             </ul>
         </div>
-</footer>
+    </footer>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
         AOS.init();
