agregan etiquetas meta con palabras clave y descripciones

--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Empresa dedicada a la industria mecanica, especializada en la fabricaciones de piezas, partes
+    y conjuntos mecanicos, asi como en el diseño de equipos especiales, mantencion y
+    reacondicionamiento de equipos y maquinaria">
+    <meta name="keywords" content="HTML , mecanica, mantencion, industria, metalurgia, empresa, cotizacion, servicios,">
     <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -103,8 +107,8 @@
                 </div>
             </div>
             <div id="tarjeta" class="card mt-5" data-aos="fade-left" data-aos-anchor-placement="top-bottom">
-                <div class="card mb-3 mt-4 text-center" style="border: 0;" data-aos="fade-up" data-aos-anchor-placement="top-bottom"
-                    id="lastpic">
+                <div class="card mb-3 mt-4 text-center" style="border: 0;" data-aos="fade-up"
+                    data-aos-anchor-placement="top-bottom" id="lastpic">
                     <img src="assest/img/1805-09.jpg" class="card-img-top rounded" alt="...">
                     <div class="card-body ">
                         <h5 class="card-title">EQUIPAMIENTO DISPONIBLE</h5>
@@ -131,8 +135,10 @@
             <div class="col-12  text-center  ">
                 <h3>Redes Sociales</h3>
                 <img class="imgred-facebook" src="assest/img/facebook_icono.png" alt="Facebook"><a href="#"></a></img>
-                <img class="imgred-instagram" src="assest/img/instagram_icono-removebg-preview.png" alt="Instagram"><a href="#"></a></img>
-                <img class="imgred-gmail" src="assest/img/gmail_icono-removebg-preview.png" alt="Gmail"><a href="#"></a></img>
+                <img class="imgred-instagram" src="assest/img/instagram_icono-removebg-preview.png" alt="Instagram"><a
+                    href="#"></a></img>
+                <img class="imgred-gmail" src="assest/img/gmail_icono-removebg-preview.png" alt="Gmail"><a
+                    href="#"></a></img>
                 <p>Pagina Creada por <a href="https://www.instagram.com/edu.schettino0/">Eduardo Schettino </a>
                     |
                     2022.</p>
