se agregan comentarios a archivos html

--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -15,9 +15,11 @@
 
     <title>Sosemin | Servicios</title>
 </head>
+<!--Inicio body-->
 
 <body>
     <header>
+        <!--Inicio NavBar-->
         <nav class="navbar navbar-expand-lg bg-light" id="header_bg">
             <div class="container d-flex navbar-dark">
                 <a href="../index.html"><img src="../assest/img/logo.png" id="logo" alt="Logo"></a>
@@ -45,8 +47,12 @@
                     </ul>
                 </div>
         </nav>
+        <!--Termino NavBar-->
     </header>
+    <!--Termino Header-->
+    <!--Inicio Main-->
     <main>
+        <!--Inicio tarjetas-->
         <div class="container text-center">
             <h2 class="fs-2 text-center mt-4">Servicios que ofrecemos:</h2>
             <div id="contenedor--service">
@@ -93,9 +99,10 @@
                     </div>
                 </div>
             </div>
-
+            <!--Termino de tarjetas-->
         </div>
-
+        <!--Termino Main-->
+        <!--Inicio Footer-->
     </main>
     <footer class="mt-3">
         <div class="col-12 col-lg-6 align-self-center">
@@ -121,6 +128,7 @@
                 <li><a href="../pages/contacto.html">Contacto</a></li>
             </ul>
         </div>
+        <!--Termino Footer-->
     </footer>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
@@ -130,5 +138,6 @@
         integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
         crossorigin="anonymous"></script>
 </body>
+<!--Termino de body-->
 
 </html>
