--- a/index.html
+++ b/index.html
@@ -16,9 +16,12 @@
     <link rel="stylesheet" href="css/style.css">
     <title>Sosemin | Inicio </title>
 </head>
+<!-- Inicio Body-->
 
 <body>
+    <!-- Inicio Header-->
     <header>
+        <!--Inicio NavBar-->
         <nav class="navbar navbar-expand-lg bg-light" id="header_bg">
             <div class="container d-flex navbar-dark">
                 <a href="index.html"><img src="assest/img/logo.png" id="logo" alt="Logo"></a>
@@ -46,8 +49,12 @@
                     </ul>
                 </div>
         </nav>
+        <!--Termino NavBar-->
     </header>
+    <!--Termino Header-->
+    <!--Inicio Main-->
     <main>
+        <!--Inicio carrousel-->
         <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
             <div class="text-center text-light position-absolute top-50 start-50 translate-middle " id="text_carousel"
                 data-aos="fade-down" data-aos-duration="2000">
@@ -80,6 +87,8 @@
                 <span class="visually-hidden">Next</span>
             </button>
         </div>
+        <!--Termino Carrousel-->
+        <!--Inicio Tarjetas-->
         <div class="container">
             <div class="row row-cols-1 row-cols-md-2 g-4 text-center">
                 <div class="col">
@@ -120,6 +129,8 @@
                 </div>
             </div>
         </div>
+        <!--Termino Tarjetas-->
+        <!--Inicio Imagen Final-->
         <section class="container__imgFinal">
             <div class="textFinal p-5" data-aos="fade-up" data-aos-duration="2000">
                 <p>Con un excelente equipo formado por más de 14 ingenieros mecánicos y 80 técnicos
@@ -129,7 +140,10 @@
                     de calidad de los procesos productivos y administrativos de la compañía.</p>
             </div>
         </section>
+        <!--Termino Imagen Final-->
     </main>
+    <!--Termino Main-->
+    <!--Inicio Footer-->
     <footer class="mt-3">
         <div class="col-12 col-lg-6 align-self-center">
             <div class="col-12  text-center  ">
@@ -154,7 +168,7 @@
             </ul>
         </div>
     </footer>
-
+    <!--Termino Footer-->
 
 
 
@@ -166,5 +180,6 @@
         integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
         crossorigin="anonymous"></script>
 </body>
+<!--Termino Body-->
 
 </html>
