--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -15,9 +15,11 @@
 
     <title>Sosemin | Contacto</title>
 </head>
-
-<body>
+<!--Inicio Body-->
+<body> 
+    <!--Inicio Header-->
     <header>
+        <!--Inicio NavBar-->
         <nav class="navbar navbar-expand-lg bg-light" id="header_bg">
             <div class="container d-flex navbar-dark">
                 <a href="../index.html"><img src="../assest/img/logo.png" id="logo" alt="Logo"></a>
@@ -45,10 +47,14 @@
                     </ul>
                 </div>
         </nav>
+        <!--Termino Navbar-->
     </header>
+    <!--Termino Header-->
+    <!--Inicio Main-->
     <main>
         <div class="container text-center pt-5" data-aos="zoom-in">
             <h1>Ponte en contacto con nosotros!</h1>
+            <!--Inicio Formulario-->
             <form>
                 <div class="form-group">
                     <label for="">Correo electronico</label>
@@ -74,10 +80,13 @@
                 <button type="submit" class="btn btn-primary mt-5">Enviar</button>
                 <button type="reset" class="btn btn-primary mt-5">Borrar datos</button>
             </form>
+            <!--Fin Formulario-->
 
         </div>
 
     </main>
+    <!--Termino Main-->
+    <!--Inicio Footer-->
     <footer class="mt-3">
         <div class="col-12 col-lg-6 align-self-center">
             <div class="col-12  text-center  ">
@@ -103,6 +112,7 @@
             </ul>
         </div>
     </footer>
+    <!--Fin Footer-->
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
         AOS.init();
