--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -15,9 +15,12 @@
 
     <title>Sosemin | Quienes Somos</title>
 </head>
+<!--Inicio Body-->
 
 <body>
+    <!--Inicio Header-->
     <header>
+        <!--Inicio NavBar-->
         <nav class="navbar navbar-expand-lg bg-light" id="header_bg">
             <div class="container d-flex navbar-dark">
                 <a href="../index.html"><img src="../assest/img/logo.png" id="logo" alt="Logo"></a>
@@ -45,7 +48,10 @@
                     </ul>
                 </div>
         </nav>
+        <!--Termino NavBar-->
     </header>
+    <!--Termino Header-->
+    <!--Inicio Main-->
     <main>
         <div class="container mt-5" data-aos="zoom-in">
             <div class="grid">
@@ -88,6 +94,8 @@
             </div>
         </div>
     </main>
+    <!--Termino Main-->
+    <!--Inicio Footer-->
     <footer class="mt-3">
         <div class="col-12 col-lg-6 align-self-center">
             <div class="col-12  text-center  ">
@@ -113,6 +121,7 @@
             </ul>
         </div>
     </footer>
+    <!--Termino Footer-->
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
         AOS.init();
