se modifica formulario

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -16,7 +16,8 @@
     <title>Sosemin | Contacto</title>
 </head>
 <!--Inicio Body-->
-<body> 
+
+<body>
     <!--Inicio Header-->
     <header>
         <!--Inicio NavBar-->
@@ -55,34 +56,39 @@
         <div class="container text-center pt-5" data-aos="zoom-in">
             <h1>Ponte en contacto con nosotros!</h1>
             <!--Inicio Formulario-->
-            <form>
-                <div class="form-group">
-                    <label for="">Correo electronico</label>
-                    <input type="email" class="form-control" aria-describedby="emailHelp" placeholder="Enter email">
-                    <small id="emailHelp" class="form-text text-muted">No lo compartiremos con nadie.</small>
+            <div class="container__form">
+                <form class="p-5">
+                    <div class="form-group">
+                        <label for="">Correo electronico</label>
+                        <input type="email" class="form-control" aria-describedby="emailHelp" placeholder="">
+                        <small id="emailHelp" class="form-text text-muted">No lo compartiremos con nadie.</small>
+                    </div>
+                    <div class="form-group">
+                        <label for="">Nombre</label>
+                        <input type="text" class="form-control">
+                    </div>
+                    <div class="form-group">
+                        <label for="">Apellido</label>
+                        <input type="text" class="form-control">
+                    </div>
+                    <div class="form-group">
+                        <label for="">Telefono/Celular</label>
+                        <input type="number" class="form-control">
+                    </div>
+                    <div class="form-group">
+                        <label for="exampleFormControlTextarea1">Escribenos un mensaje!</label>
+                        <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                    </div>
+                    <button type="submit" class="btn btn-primary mt-5">Enviar</button>
+                    <button type="reset" class="btn btn-primary mt-5">Borrar datos</button>
+                </form>
+                <div class="form--img">
+                    <img src="http://placekitten.com/396/480" alt="">
                 </div>
-                <div class="form-group">
-                    <label for="">Nombre</label>
-                    <input type="text" class="form-control">
-                </div>
-                <div class="form-group">
-                    <label for="">Apellido</label>
-                    <input type="text" class="form-control">
-                </div>
-                <div class="form-group">
-                    <label for="">Telefono/Celular</label>
-                    <input type="number" class="form-control">
-                </div>
-                <div class="form-group">
-                    <label for="exampleFormControlTextarea1">Escribenos un mensaje!</label>
-                    <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
-                </div>
-                <button type="submit" class="btn btn-primary mt-5">Enviar</button>
-                <button type="reset" class="btn btn-primary mt-5">Borrar datos</button>
-            </form>
-            <!--Fin Formulario-->
-
+            </div>
         </div>
+        <!--Fin Formulario-->
+
 
     </main>
     <!--Termino Main-->
