se modifica pagina nosotros

--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -55,13 +55,13 @@
     <main>
         <div class="container mt-5" data-aos="zoom-in">
             <div class="grid">
-                <div class="vision">
+                <div class="vision p-4 m-2">
                     <h2>Vision</h2>
                     <p>Ser la mejor oferta de servicio industrial, sustentada en el desarrollo de capacidades,
                         crecimiento,
                         actualización de competencias y buenos resultados.</p>
                 </div>
-                <div class="valores">
+                <div class="valores p-4 m-2 ">
                     <h2>Valores</h2>
                     <p>COMPROMISO: Somos conscientes de la importancia de cumplir nuestras promesas y por ellos nos
                         exigimos
@@ -74,7 +74,7 @@
                         internos
                         como externos.</p>
                 </div>
-                <div class="mision">
+                <div class="mision p-4 m-2">
                     <h2>Mision</h2>
                     <p>Brindar calidad y confiabilidad en todos nuestros productos y servicios.</p>
                     <p>RESPONSABILIDAD: Somos responsables de nuestras decisiones y del cumplimiento de la normativa
