se agrega imagen a page contacto, y se edita page ubicacion

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -83,7 +83,7 @@
                     <button type="reset" class="btn btn-primary mt-5">Borrar datos</button>
                 </form>
                 <div class="form--img">
-                    <img src="http://placekitten.com/396/480" alt="">
+                    <img src="../assest/img/img-img.jpg"  style="border-radius: 20px" alt="imagen mecanica">
                 </div>
             </div>
         </div>
