--- a/pages/ubicacion.html
+++ b/pages/ubicacion.html
@@ -49,11 +49,7 @@
     <main>
         <div class="container text-center" data-aos="zoom-in">
             <h1>Ven a visitarnos!</h1>
-            <p>Nos encontramos en... Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusantium autem nobis
-                fuga, delectus quod rem voluptate neque unde enim sequi quas culpa temporibus? Consectetur ducimus
-                deleniti harum mollitia obcaecati placeat. Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-                Praesentium animi sequi aliquid, assumenda magnam, ipsam esse possimus at laudantium nesciunt ratione
-                doloremque libero mollitia consectetur facilis quis suscipit earum neque.</p>
+            <p>Puedes visitarnos si asi deseas!, y te podremos orientar sobre los trabajos que realizamos.</p>
             <div style="width: 100%; margin:0 auto;"><iframe width="100%" height="600" frameborder="0" scrolling="no"
                     marginheight="0" marginwidth="0"
                     src="https://maps.google.com/maps?width=100%25&amp;height=600&amp;hl=es&amp;q=Bellavista+(Sosemint)&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"><a
